Made minor cleanses to front-end

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -6,7 +6,7 @@
 </p>
 
 <p>
-  <strong>Imageurl:</strong>
+  <strong>ImageURL:</strong>
   <%= @recipe.imageURL %>
 </p>
 
@@ -31,12 +31,12 @@
 </p>
 
 <p>
-  <strong>Mintime:</strong>
+  <strong>MinTime:</strong>
   <%= @recipe.minTime %>
 </p>
 
 <p>
-  <strong>Maxtime:</strong>
+  <strong>MaxTime:</strong>
   <%= @recipe.maxTime %>
 </p>
 
