--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -6,13 +6,13 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Imageurl</th>
+      <th>ImageURL</th>
       <th>Description</th>
       <th>Ingredients</th>
       <th>Steps</th>
       <th>Utensils</th>
-      <th>Mintime</th>
-      <th>Maxtime</th>
+      <th>MinTime</th>
+      <th>MaxTime</th>
       <th colspan="3"></th>
     </tr>
   </thead>
