--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -51,6 +51,11 @@
     <%= form.number_field :maxTime %>
   </div>
 
+  <div class="field">
+    <%= form.label :password %>
+    <%= form.password_field :password %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
