Made form section to delete recipes

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -60,3 +60,32 @@
     <%= form.submit %>
   </div>
 <% end %>
+
+
+<% if @recipe.persisted? %>
+
+  <br/>
+
+  <%= form_with(model: recipe, local: true) do |form| %>
+    <% if recipe.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(recipe.errors.count, "error") %> prohibited this recipe from being saved:</h2>
+
+        <ul>
+          <% recipe.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field">
+      <%= form.label :password %>
+      <%= form.password_field :password %>
+    </div>
+
+    <div class="actions">
+      <%= button_to('Destroy', recipe_path(@recipe), method: :delete, remote: true)%>
+    </div>
+  <% end %>
+<% end %>
