--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,38 +1,30 @@
-<h1>Recipes</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>ImageURL</th>
-      <th>Description</th>
-      <th>Ingredients</th>
-      <th>Steps</th>
-      <th>Utensils</th>
-      <th>MinTime</th>
-      <th>MaxTime</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="container-fluid">
+    <% i = 0 %>
     <% @recipes.each do |recipe| %>
-      <tr>
-        <td><%= recipe.name %></td>
-        <td><%= recipe.imageURL %></td>
-        <td><%= recipe.description %></td>
-        <td><%= recipe.ingredients %></td>
-        <td><%= recipe.steps %></td>
-        <td><%= recipe.utensils %></td>
-        <td><%= recipe.minTime %></td>
-        <td><%= recipe.maxTime %></td>
-        <td><%= link_to 'Show', recipe %></td>
-        <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
-      </tr>
+      <% if i % 4 == 0 %>
+        <div class="row mt-3">
+      <% end %>
+      <div class="col col-3">
+        <div class="rounded recipe-card">
+          <a href='<%= recipe_path(recipe) %>'>
+            <% if recipe.imageURL %>
+              <img class="img-fluid img-thumbnail rounded" src='<%= recipe.imageURL %>' width="100%" height="75%"/>
+            <% else %>
+              <div></div>
+            <% end %>
+            <h4><%= recipe.name %></h4>
+            <p><%= recipe.description %></p>
+          </a>
+          <a href='<%= edit_recipe_path(recipe) %>'>Edit</a>
+        </div>
+      </div>
+      <% if i % 4 == 3 %>
+        </div>
+      <% end %>
+      <% i += 1 %>
     <% end %>
-  </tbody>
-</table>
+</div>
 
-<br>
+<br/>
 
 <%= link_to 'New Recipe', new_recipe_path %>
