--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -2,7 +2,20 @@
 // They will automatically be included in application.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+body {
+  background-color: #F7416E !important;
+  width: 100%;
+  height: 100%;
+}
+
 .recipe-card {
-  background-color: pink;
+  background-color: #E95D80;
   padding: 5px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+
+  h4 {
+    color: black;
+  }
 }
