--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -6,16 +6,17 @@
     <% end %>
     <div class="col col-3">
       <div class="rounded recipe-card">
-        <a href='<%= recipe_path(recipe) %>'>
-          <% if recipe.imageURL %>
-            <img class="img-fluid img-thumbnail rounded" src='<%= recipe.imageURL %>' width="100%" height="75%"/>
-          <% else %>
-            <div></div>
-          <% end %>
-          <h4><%= recipe.name %></h4>
-          <p><%= recipe.description %></p>
-        </a>
-        <a href='<%= edit_recipe_path(recipe) %>'>Edit</a>
+        <div class="d-flex justify-content-center">
+          <a href='<%= recipe_path(recipe) %>'>
+            <% if recipe.imageURL && recipe.imageURL != '' %>
+              <img class="img-fluid img-thumbnail rounded d-block" src='<%= recipe.imageURL %>' width="350" height="350"/>
+            <% else %>
+              <div></div>
+            <% end %>
+            <h4><%= recipe.name %></h4>
+          </a>
+        </div>
+        <p><%= recipe.description %> <a href='<%= edit_recipe_path(recipe) %>'>Edit</a></p>
       </div>
     </div>
     <% if i % 4 == 3 %>
