--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -15,6 +15,11 @@ body {
   height: 100%;
   text-align: center;
 
+  .recipe-image {
+    width: 300px;
+    height: 300px;
+  }
+
   h4 {
     color: black;
   }
