--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,5 +1,7 @@
+<%= render 'recipes/returnButton' %>
+
 <h1>New Recipe</h1>
 
 <%= render 'form', recipe: @recipe %>
 
-<%= link_to 'Back', recipes_path %>
+<%= render 'recipes/returnButton' %>
