Gave recipe new page an image preview

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -30,3 +30,9 @@ body {
   width: 95%;
   margin: 5px;
 }
+
+#recipe-preview-image {
+  background-color: lightgray;
+  width: 900px;
+  height: 900px;
+}
