--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -18,6 +18,9 @@
 
   <h4>Image URL</h4>
   <input type="text" title="Image URL" id="imageurl-field">
+  <br/>
+  <br/>
+  <img src='<%= path_to_image('QuestionMark.png') %>' id="recipe-preview-image" width="700" height="700px">
 
   <br/>
   <br/>
