Further improved appearance of new recipe form

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -33,6 +33,10 @@ body {
 
 #recipe-preview-image {
   background-color: lightgray;
-  width: 900px;
-  height: 900px;
+  width: 600px;
+  height: 600px;
+}
+
+.form-submit {
+  text-align: center;
 }
