--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -2,79 +2,7 @@
 
 <br/>
 
-<div class="d-flex justify-content-center">
-  <h1>New Recipe: <span id="recipe-name-display"></span></h1>
-</div>
-
-<br/>
-
-<div class="container">
-
-  <h4>Name</h4>
-  <input type="text" title="Name" id="name-field" class="w-100"/>
-
-  <br/>
-  <br/>
-
-  <h4>Image URL</h4>
-  <input type="text" title="Image URL" id="imageurl-field" class="w-100">
-  <br/>
-  <br/>
-  <div class="d-flex justify-content-center">
-    <img src='<%= path_to_image('QuestionMark.png') %>' id="recipe-preview-image" width="600" height="600">
-  </div>
-
-  <br/>
-  <br/>
-
-  <h4>Description</h4>
-  <textarea title="Description" id="description-field" class="w-100" rows="5"></textarea>
-
-  <br/>
-  <br/>
-
-  <div class="d-flex justify-content-center">
-    <p><input type="number" title="Minimum Time" id="mintime-field" value="15"/>minutes <span id="preparation-time-label">&#8804; Preparation Time &#8804;</span> <input type="number" title="Maximum Time" id="maxtime-field" value="60"/>minutes</p>
-  </div>
-
-  <br/>
-  <br/>
-
-  <h4>Ingredients</h4>
-  <div id="ingredients-list" class="resizable-list list-unordered">
-    <!-- TODO: make -->
-  </div>
-
-  <br/>
-  <br/>
-
-  <h4>Steps</h4>
-  <div id="steps-list" class="resizable-list list-ordered">
-    <!-- TODO: make -->
-  </div>
-
-  <br/>
-  <br/>
-
-  <h4>Utensils</h4>
-  <div id="utensils-list" class="resizable-list list-unordered">
-    <!-- TODO: make -->
-  </div>
-
-  <br/>
-  <br/>
-
-  <div class="form-submit">
-    <h4>Submit</h4>
-    <input type="password" title="Password" id="password-field"/>&nbsp;&nbsp;<button class="btn btn-primary" type="submit">Add Recipe</button>
-  </div>
-
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-
-</div>
+<% @submit_action_name = "Add Recipe" %>
+<%= render 'recipes/form' %>
 
 <%= render 'recipes/returnButton' %>
