--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -3,6 +3,6 @@
 <br/>
 
 <% @submit_action_name = "Edit Recipe" %>
-<%= render 'recipes/form', recipe: @recipe %>
+<%= render 'recipes/form' %>
 
 <%= render 'recipes/returnButton' %>
