--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -82,18 +82,11 @@
 
   <h4>Utensils</h4>
   <div id="utensils-list" class="resizable-list row">
-    <div class="col">
-      <button class="btn w-100 <%= recipe_exists && @recipe.utensils.include?("Fork") ? "selected-utensil" : "" %>" id="fork-selection-button">Fork</button>
-    </div>
-    <div class="col">
-      <button class="btn w-100 <%= recipe_exists && @recipe.utensils.include?("Spoon") ? "selected-utensil" : "" %>" id="spoon-selection-button">Spoon</button>
-    </div>
-    <div class="col">
-      <button class="btn w-100 <%= recipe_exists && @recipe.utensils.include?("Knife") ? "selected-utensil" : "" %>" id="knife-selection-button">Knife</button>
-    </div>
-    <div class="col">
-      <button class="btn w-100 <%= recipe_exists && @recipe.utensils.include?("Hands") ? "selected-utensil" : "" %>" id="hands-selection-button">Hands</button>
-    </div>
+    <% %w(Fork Spoon Knife Hands).each do |utensil|  %>
+      <div class="col">
+        <button class='btn w-100 <%= recipe_exists && @recipe.utensils.include?(utensil) ? "selected-utensil" : "" %>' id='<%= utensil.downcase %>-selection-button'><%= utensil %></button>
+      </div>
+    <% end %>
   </div>
 
   <br/>
