Improved appearance of show

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -41,6 +41,11 @@ body {
   text-align: center;
 }
 
+.utensil-display {
+  background: lightgray;
+  text-align: center;
+}
+
 .selected-utensil {
   background-color: limegreen;
 }
