--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -19,7 +19,7 @@
           </a>
         </div>
         <div class="row w-100">
-          <p class="col col-10"><%= recipe.description %></p>
+          <p class="col col-10"><%= truncate(recipe.description, :length => 47) + (recipe.description.length > 47 ? "..." : "") %></p>
           <a class="col col-2" href='<%= edit_recipe_path(recipe) %>'><%= icon("fas", "edit") %></a>
         </div>
       </div>
